k8s/shazam-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shazam-api-service
  namespace: shazam
spec:
  type: ClusterIP
  selector:
    app: shazam-api
  ports:
  - port: 80
    targetPort: 5000
